basic working stuff.

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -14,7 +14,11 @@ events {
 }
 
 
+
 http {
+    limit_req_zone $binary_remote_addr zone=mylimit:10m rate=12r/s;
+    limit_req_zone $binary_remote_addr zone=minute:10m rate=30r/m;
+
     include       mime.types;
     default_type  application/octet-stream;
 
@@ -43,6 +47,17 @@ http {
         location / {
             root   html;
             index  index.html index.htm;
+            limit_req zone=mylimit delay=2 burst=12;
+
+
+        }
+
+        location /minute {
+            root   html;
+            index  index.html index.htm;
+            limit_req zone=minute delay=2 burst=2;
+
+
         }
 
         #error_page  404              /404.html;
