--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -2,7 +2,7 @@
 #user  nobody;
 worker_processes  1;
 
-#error_log  logs/error.log;
+error_log  logs/error.log debug;
 #error_log  logs/error.log  notice;
 #error_log  logs/error.log  info;
 
@@ -16,8 +16,15 @@ events {
 
 
 http {
+
+    map $http_authorization $limita {
+        default "";
+        "~.+" bar;
+    }
+
     limit_req_zone $binary_remote_addr zone=mylimit:10m rate=12r/s;
     limit_req_zone $binary_remote_addr zone=minute:10m rate=30r/m;
+    limit_req_zone foo zone=authorization:10m rate=60r/m;
 
     include       mime.types;
     default_type  application/octet-stream;
@@ -47,7 +54,8 @@ http {
         location / {
             root   html;
             index  index.html index.htm;
-            limit_req zone=mylimit delay=2 burst=12;
+            limit_req zone=mylimit;
+            #limit_req zone=authorization nodelay burst=30;
 
 
         }
@@ -55,7 +63,7 @@ http {
         location /minute {
             root   html;
             index  index.html index.htm;
-            limit_req zone=minute delay=2 burst=2;
+            limit_req zone=minute nodelay burst=2;
 
 
         }
